--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.17.3",
+    "request": "^2.85.0",
     "stellar-sdk": "^0.8.0"
   }
 }
